Correction menu
* menu qui ne tient pas sur une ligne sur mobile
* scrollbar dans le menu sur mobile
* menu qui ne tient pas sur une ligne sur tablette

--- a/css/style/styles.css
+++ b/css/style/styles.css
@@ -11,7 +11,7 @@
 }
 
 #logoLocation{
-	width: 90%;
+	width: 60%;
 	margin-top: 20px;
 }
 #logo_bernardins{
@@ -34,6 +34,10 @@
 	#top{
 		/*display: none;*/
 	}
+
+  #scrollTarget {
+    overflow-y: hidden;
+  }
 }
 .plus_espaces{
 	margin-top: 20px
@@ -106,6 +110,11 @@
 	#top h1{
 		font-size: 80px;
 	}
+}
+@media (max-width: 991px){
+  #scrollTarget .navbar-nav > li > a {
+    font-size: 0.9em;
+  }
 }
 @media (min-width: 992px){
 	#top h1{
